--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ body{
 
 .profile-picture{
     border-radius: 10rem;
-    height: 10vh;
-    margin-bottom: 1rem;
+    height: 15vh;
+    padding: 1rem;
 }
 .name{
     font-size: var(--heading);
